force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/amazonconnect__AC_CtiAttribute__c.object-meta.xml
<CustomObject>
    <label>AC CTI Attribute</label>
    <nameField>
        <label>CTI Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CTI Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>