force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/fields/amazonconnect__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>