force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/fields/amazonconnect__Display__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Display__c</fullName>
    <label>Display</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACCtiAttributeDisplay</valueSetName>
    </valueSet>
</CustomField>