force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/fields/amazonconnect__Format__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Format__c</fullName>
    <label>Format</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>