force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/fields/amazonconnect__Style__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Style__c</fullName>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>