force-app/main/default/objects/amazonconnect__AC_CtiAttribute__c/fields/amazonconnect__Type__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACCtiAttributeType</valueSetName>
    </valueSet>
</CustomField>